--- a/Buzzle_-main/homealuno.css
+++ b/Buzzle_-main/homealuno.css
@@ -275,7 +275,7 @@ main{
 .h2{
     position: absolute;
     margin-top: auto;
-    right: 75%;
+    right: 69%;
     top: 66%;
 }
 
@@ -285,18 +285,20 @@ main{
     width:  0%;
     height: 15rem;
     top: 66%;
-    right: 68%;
+    right: 60%;
 }
 
 .h4{
     position: absolute;
     top: 82%;
-    right: 77%;
-
-
+    right: 69%;
 }
 
-
+.h5{
+    position: absolute;
+    top: 82%;
+    right: 58%;
+}
 
 /* fim */
 
